--- a/package.json
+++ b/package.json
@@ -6,28 +6,66 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:push": "drizzle-kit push",
+    "db:studio": "drizzle-kit studio",
+    "db:drop": "drizzle-kit drop"
   },
   "dependencies": {
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
+    "@react-email/components": "0.5.1",
+    "@types/bcrypt": "^6.0.0",
+    "@types/nodemailer": "^7.0.1",
+    "@types/nprogress": "^0.2.3",
+    "@types/qrcode": "^1.5.5",
+    "add": "^2.0.6",
+    "bcrypt": "^6.0.0",
+    "bunx": "^0.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "drizzle-orm": "^0.44.5",
+    "fedapay": "^1.2.5",
     "framer-motion": "^12.23.12",
+    "html-to-image": "^1.11.11",
     "i18next": "^25.3.4",
+    "input": "^1.0.1",
+    "jspdf": "^2.5.2",
+    "ky": "^1.9.1",
     "lucide-react": "^0.539.0",
     "next": "15.4.6",
     "next-i18next": "^15.4.2",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "next-themes": "^0.4.6",
+    "nextjs-toploader": "^1.6.12",
+    "nodemailer": "^7.0.6",
+    "nprogress": "^0.2.0",
+    "pg": "^8.16.3",
+    "phone": "^3.1.67",
+    "qrcode": "^1.5.4",
+    "react": "19.1.1",
+    "react-day-picker": "^9.9.0",
+    "react-dom": "19.1.1",
+    "react-email": "4.2.8",
     "react-i18next": "^15.6.1",
-    "tailwind-merge": "^3.3.1"
+    "shadcn": "^3.0.0",
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.3.1",
+    "zod": "^4.1.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/pg": "^8.15.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "drizzle-kit": "^0.31.4",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
     "tailwindcss": "^4",
