--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@react-email/components": "0.5.1",
     "@types/bcrypt": "^6.0.0",
+    "@types/marked": "^6.0.0",
     "@types/nodemailer": "^7.0.1",
     "@types/nprogress": "^0.2.3",
     "@types/qrcode": "^1.5.5",
@@ -42,6 +43,7 @@
     "jspdf": "^2.5.2",
     "ky": "^1.9.1",
     "lucide-react": "^0.539.0",
+    "marked": "^16.2.1",
     "next": "15.4.6",
     "next-i18next": "^15.4.2",
     "next-themes": "^0.4.6",
