--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@react-email/components": "0.5.1",
     "@types/bcrypt": "^6.0.0",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/marked": "^6.0.0",
     "@types/nodemailer": "^7.0.1",
     "@types/nprogress": "^0.2.3",
@@ -30,6 +31,7 @@
     "add": "^2.0.6",
     "bcrypt": "^6.0.0",
     "bunx": "^0.1.0",
+    "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
